# pyautodiff

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
examples/: basic_autodiff.py
pyautodiff/: __init__.py  autograd.py  tensor.py
pyautodiff/ops/: __init__.py  base.py  linalg.py  math.py  reduction.py
